# minimal-idiomatic-rust-gtk

./: Cargo.toml
src/: main.rs
